[package]
name = "uuid-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "4.0.0", features = ["uuid", 'chrono'] }
async-graphql-actix-web = "4.0.0"
sqlx = { version = "0.5.13", features = ["uuid", "runtime-actix-native-tls"] }
uuid = { version = "1.0.0", features = ["v4"] }
